# OSLabs

./: .gitignore
task1/: compile_commands.json
task1/.cache/clangd/index/: func.cpp.74A45B7B4CECFB1C.idx  func.h.E1BB894EE2FDDCC6.idx  main.cpp.671FF4A05FA7D1AD.idx
task1/include/func_lib/: func.h
task1/src/: CMakeLists.txt  main.cpp
task1/src/func_lib/: CMakeLists.txt  func.cpp
task2/: compile_commands.json
task2/.cache/clangd/index/: main.cpp.B4297AD40E6B742C.idx  subprocess.cpp.B3EC37DD1AADD5D6.idx  subprocess.h.6BA376DBC3D5FDF0.idx
task2/include/subprocess/: subprocess.h
task2/src/: CMakeLists.txt  main.cpp
task2/src/subprocess/: CMakeLists.txt
task3/: CMakeLists.txt  compile_commands.json
task3/.cache/clangd/index/: cache.cpp.A101384F211AAC0F.idx  cache.h.698B50B6EB56C189.idx  file.cpp.FA40841FDD0213B0.idx  file.h.04C321D71A864CC0.idx  semaphore.cpp.D437EB247256F275.idx  shared_memory.cpp.95E11F5DF2084B2C.idx  subprocess.h.552326CA58EFF190.idx  subprocess.h.6BA376DBC3D5FDF0.idx
task3/include/cache/: cache.h  file.h
task3/include/common/: public.h
task3/src/: CMakeLists.txt  main.cpp
task3/src/cache/: CMakeLists.txt  file.cpp
task3/src/subprocess/: subprocess.cpp
task4/: compile_commands.json
task4/.cache/clangd/index/: cache.cpp.4924B4B09030E591.idx  cache.h.81024FFF03D57DBB.idx  file.cpp.710E89CA6B35BD4B.idx  file.h.0F63F11BDA4ABB25.idx  file.h.F82A268C088155AB.idx  logger.cpp.3C6D331E83040EEC.idx  logger.h.F2106F1244F945F2.idx  main.cpp.370E58672465AC4A.idx  main.cpp.B054F63B0DFC9CFF.idx  main.cpp.B4297AD40E6B742C.idx  public.h.236CCCC0C767D9AB.idx  public.h.95A6B43BE5BF6752.idx  semaphore.h.F7AEF5361CF756B7.idx  serial.cpp.CD1177F6883119A8.idx  serial.h.6B5454BAF571189E.idx  shared_memory.h.6261902352C218D7.idx  subprocess.cpp.09AD22FEA9914AF0.idx  subprocess.cpp.B3EC37DD1AADD5D6.idx  subprocess.h.5AEEC0D836B9A8F9.idx  temperature_storage.cpp.B01F0E43CAA783B1.idx  temperature_storage.h.50EC8B14EE249777.idx
task4/include/: temperature_storage.h
task4/include/common/: public.h
task4/include/serial/: serial.h
task4/src/: CMakeLists.txt  main.cpp  temperature_storage.cpp
task4/src/cache/: file.cpp
task4/src/serial/: CMakeLists.txt  serial.cpp
